--- a/styles/globals.css
+++ b/styles/globals.css
@@ -94,10 +94,10 @@
       @apply grid-cols-2 gap-x-1 place-items-center
     }
     .epsdcont{
-      @apply block mx-3
+      @apply block mx-3 px-3
     }
     .epsdcontimg{
-      @apply w-full h-[150px]
+      @apply w-full h-[150px] py-3
     }
   }
 
